@@ -11,6 +11,7 @@ import com.elearning.quizservice.mapper.QuestionMapper;
 import com.elearning.quizservice.repository.QuestionOptionRepository;
 import com.elearning.quizservice.repository.QuestionRepository;
 import com.elearning.quizservice.service.QuestionService;
+import com.elearning.quizservice.repository.QuizRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -18,6 +19,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 /**
@@ -30,12 +32,17 @@ public class QuestionServiceImpl implements QuestionService {
     
     private final QuestionRepository questionRepository;
     private final QuestionOptionRepository optionRepository;
+    private final QuizRepository quizRepository;
     private final QuestionMapper questionMapper;
     
     @Override
     @Transactional
-    public QuestionResponse createQuestion(Quiz quiz, CreateQuestionRequest request) {
-        log.info("Creating question for quiz: {}", quiz.getId());
+    public QuestionResponse createQuestion(UUID quizId, CreateQuestionRequest request) {
+        log.info("Creating question for quiz: {}", quizId);
+        
+        // Get quiz
+        Quiz quiz = quizRepository.findByIdAndIsActiveTrue(quizId)
+                .orElseThrow(() -> ResourceNotFoundException.quiz(quizId.toString()));
         
         // Get next order index
         Integer maxOrderIndex = questionRepository.findMaxOrderIndexByQuizId(quiz.getId());
@@ -53,7 +60,7 @@ public class QuestionServiceImpl implements QuestionService {
         question = questionRepository.save(question);
         
         // Create options
-        List<QuestionOption> options = createOptions(question.getId(), request.getOptions());
+        List<QuestionOption> options = createOptions(question, request.getOptions());
         
         // Validate
         validateQuestion(question, options);
@@ -84,7 +91,7 @@ public class QuestionServiceImpl implements QuestionService {
     
     @Override
     public List<Question> getQuestionsByQuizId(UUID quizId) {
-        return questionRepository.findByQuizIdAndIsActiveTrueOrderByOrderIndexAsc(quizId);
+        return questionRepository.findByQuiz_IdAndIsActiveTrueOrderByOrderIndexAsc(quizId);
     }
     
     @Override
@@ -120,7 +127,7 @@ public class QuestionServiceImpl implements QuestionService {
         optionRepository.saveAll(oldOptions);
         
         // Create new options
-        List<QuestionOption> options = createOptions(questionId, request.getOptions());
+        List<QuestionOption> options = createOptions(question, request.getOptions());
         
         // Validate
         validateQuestion(question, options);
@@ -148,12 +155,12 @@ public class QuestionServiceImpl implements QuestionService {
     
     @Override
     public List<QuestionOption> getQuestionOptions(UUID questionId) {
-        return optionRepository.findByQuestionIdAndIsActiveTrueOrderByOrderIndexAsc(questionId);
+        return optionRepository.findByQuestion_IdAndIsActiveTrueOrderByOrderIndexAsc(questionId);
     }
     
     @Override
     public List<QuestionOption> getCorrectOptions(UUID questionId) {
-        return optionRepository.findByQuestionIdAndIsCorrectTrueAndIsActiveTrue(questionId);
+        return optionRepository.findByQuestion_IdAndIsCorrectTrueAndIsActiveTrue(questionId);
     }
     
     @Override
@@ -180,20 +187,19 @@ public class QuestionServiceImpl implements QuestionService {
     /**
      * Create question options from request
      */
-    private List<QuestionOption> createOptions(UUID questionId, 
+    private List<QuestionOption> createOptions(Question question, 
                                                 List<CreateQuestionRequest.QuestionOptionRequest> optionRequests) {
         return IntStream.range(0, optionRequests.size())
                 .mapToObj(index -> {
                     CreateQuestionRequest.QuestionOptionRequest optionRequest = optionRequests.get(index);
                     return QuestionOption.builder()
-                            .questionId(questionId)
+                            .question(question)
                             .optionText(optionRequest.getOptionText())
                             .orderIndex(index)
                             .isCorrect(optionRequest.getIsCorrect())
                             .isActive(true)
                             .build();
                 })
-                .map(optionRepository::save)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
